# capple

./: .gitignore  Makefile  README.md  docker-compose.yml  example.env
backend/: Dockerfile  pyproject.toml
backend/notebooks/: chat_api_curl_flows.ipynb  recipe_cleaner.ipynb
backend/scripts/: upload_images_to_r2.py
backend/src/: errors.py  main.py  settings.py  telemetry.py
backend/src/agents/: README.md  graph.py  state.py
backend/src/auth/: auth.py
backend/src/db/: client.py  criteria.py  db.py  store.py
backend/src/models/: battery_log.py  chat.py  error_response.py  household.py  infra.py  recipes.py
backend/src/service/: battery_logs.py  chat.py  healthcheck.py  recipes.py  users.py
backend/src/utils/: general.py  logger.py
backend/tests/: conftest.py  test_agent_planning_graph.py  test_battery_tool.py  test_chat_api.py  test_chat_service.py  test_context_tools.py  test_date_tool.py  test_events_tools.py  test_planning_tools.py  test_user_service.py  test_users_api.py  test_weather_tool.py  test_weather_tools.py
backend/tests/agents/: test_agent_node.py  test_agent_planning_graph.py  test_input_router_node.py  test_system_prompt_node.py
backend/tests/api/: test_battery_logs_api.py  test_chat_api.py  test_infrastructure_api.py  test_recipes_api.py  test_users_api.py
backend/tests/integration/: conftest.py  test_chat_api_integration.py
backend/tests/service/: test_auth_service.py  test_battery_logs_service.py  test_chat_service.py  test_recipes_service.py  test_user_service.py
backend/tests/tools/: test_battery_tool.py  test_events_tools.py  test_planning_tools.py  test_weather_tool.py
(+93 files in other folders)
