[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "requests>=2.32.3",
    "supabase>=2.29.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "boto3>=1.43.14",
    "ddgs>=9.14.4",
    "extruct>=0.18.0",
    "pandas>=3.0.3",
    "pyright>=1.1.409",
    "recipe-scrapers>=15.11.0",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.15.12",
]
